<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guid_detail_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="190dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guid_detail_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp" />

        <ImageView
            android:id="@+id/img_detail_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:contentDescription="@string/image_movie"
            android:src="@color/placeholder"
            app:layout_constraintBottom_toBottomOf="@id/guid_detail_horizontal"
            app:layout_constraintEnd_toEndOf="@id/guid_detail_vertical"
            app:layout_constraintStart_toStartOf="@id/cl_container"
            app:layout_constraintTop_toTopOf="@id/cl_container" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_vote_count"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/guid_detail_vertical"
            app:layout_constraintTop_toTopOf="@id/img_detail_poster" />

        <TextView
            android:id="@+id/tv_detail_vote_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/vote_count"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_popularity"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/guid_detail_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title" />

        <TextView
            android:id="@+id/tv_detail_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/popularity"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_original_language"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/guid_detail_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_vote_count" />

        <TextView
            android:id="@+id/tv_detail_original_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/original_language"
            app:layout_constraintBottom_toBottomOf="@id/img_detail_poster"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/guid_detail_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_popularity" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cv_detail_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_outline_bookmark_border_48"
            app:civ_border_color="@color/placeholder"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/placeholder"
            app:layout_constraintEnd_toStartOf="@id/cv_detail_share"
            app:layout_constraintStart_toStartOf="@id/cl_container"
            app:layout_constraintTop_toTopOf="@id/guid_detail_horizontal" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cv_detail_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_share_48"
            app:civ_border_color="@color/placeholder"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/placeholder"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toEndOf="@id/cv_detail_bookmark"
            app:layout_constraintTop_toTopOf="@id/guid_detail_horizontal" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/overview"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/cl_container"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_title"
            app:layout_constraintStart_toStartOf="@id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@id/cv_detail_bookmark" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/cl_container"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/cl_container"
            app:layout_constraintTop_toTopOf="@id/cl_container" />

        <TextView
            android:id="@+id/tv_detail_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/there_is_an_error"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/cl_container"
            app:layout_constraintEnd_toEndOf="@id/cl_container"
            app:layout_constraintStart_toStartOf="@id/cl_container"
            app:layout_constraintTop_toTopOf="@id/cl_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>